# shakes

./: LICENSE  README.md  build.sh  main.py  pyproject.toml  shakes_api_thoughts_notes.md
examples/: rounds.py
src/shakes/: constants.py  games.py  models.py  players.py  utils.py
